--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -1,7 +1,3 @@
-<!DOCTYPE web-app PUBLIC
-        "-//Sun Microsystems, Inc.//DTD Web Application 2.3//EN"
-        "http://java.sun.com/dtd/web-app_2_3.dtd" >
-
 <web-app>
     <display-name>Archetype Created Web Application</display-name>
     <servlet>
@@ -18,4 +14,8 @@
         <servlet-name>Controller</servlet-name>
         <url-pattern>/deleteUser</url-pattern>
     </servlet-mapping>
+
+    <listener>
+        <listener-class>user.ApplicationListener</listener-class>
+    </listener>
 </web-app>
