--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -18,4 +18,9 @@
     <listener>
         <listener-class>user.ApplicationListener</listener-class>
     </listener>
+    <context-param>
+        <param-name>jdbcDriver</param-name>
+        <param-value>org.postgresql.Driver</param-value>
+    </context-param>
+
 </web-app>
