--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -5,6 +5,11 @@
         <servlet-class>user.Controller</servlet-class>
     </servlet>
 
+    <servlet>
+        <servlet-name>AuthorizationService</servlet-name>
+        <servlet-class>user.AuthorizationService</servlet-class>
+    </servlet>
+
     <servlet-mapping>
         <servlet-name>Controller</servlet-name>
         <url-pattern>/registration</url-pattern>
@@ -13,6 +18,11 @@
     <servlet-mapping>
         <servlet-name>Controller</servlet-name>
         <url-pattern>/deleteUser</url-pattern>
+    </servlet-mapping>
+
+    <servlet-mapping>
+        <servlet-name>AuthorizationService</servlet-name>
+        <url-pattern>/login</url-pattern>
     </servlet-mapping>
 
     <listener>
