--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -15,6 +15,12 @@
         <servlet-name>AuthorizationController</servlet-name>
         <servlet-class>messenger.controller.AuthorizationController</servlet-class>
     </servlet>
+
+    <servlet>
+        <servlet-name>ReferralController</servlet-name>
+        <servlet-class>messenger.controller.ReferralController</servlet-class>
+    </servlet>
+
     <servlet-mapping>
         <servlet-name>AuthorizationController</servlet-name>
         <url-pattern>/login</url-pattern>
@@ -28,6 +34,11 @@
     <servlet-mapping>
         <servlet-name>DeleteUserController</servlet-name>
         <url-pattern>/deleteUser</url-pattern>
+    </servlet-mapping>
+
+    <servlet-mapping>
+        <servlet-name>ReferralController</servlet-name>
+        <url-pattern>/getReferrals</url-pattern>
     </servlet-mapping>
 
     <listener>
