--- a/pom.xml
+++ b/pom.xml
@@ -144,6 +144,15 @@
 <!--            <version>1.4</version>-->
 <!--        </dependency>-->
 
+        <!-- https://mvnrepository.com/artifact/com.mashape.unirest/unirest-java -->
+        <dependency>
+            <groupId>com.mashape.unirest</groupId>
+            <artifactId>unirest-java</artifactId>
+            <version>1.4.9</version>
+        </dependency>
+
+
+
 
     </dependencies>
 
